--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
+  "name": "drizzle-digital-shop",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "dev": "node --watch /src/app.js",
+    "dev": "node --watch server.js",
     "migrate": "drizzle-kit generate:pg"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.25.4",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5",
-    "pino": "^8.21.0",
-    "pino-pretty": "^10.3.1",
+    "pino": "^9.1.0",
+    "pino-pretty": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
